# task-management

./: .gitignore  .pylintrc  Makefile  install.sh  main.py  pyproject.toml  requirements.txt
actions/: register_button.py  register_button_action.py
src/: main.py
src/constants/: core.py
src/data/: register.py
src/ui/: core.py  input_task_widget.py  input_text_widget.py  task_widget.py
task_management/: main.py
task_management/constants/: core.py
task_management/data/: register.py
task_management/ui/: core.py  input_task_widget.py  input_text_widget.py  task_widget.py
task_management/ui/css/: scroll-area.qss
tasks/: registers.py
widgets/: input_text.py  input_text_widget.py  register_button.py  register_button_widget.py  tasks_list_widget.py
