[tool.poetry]
name = "task_management"
version = "0.1.0"
description = "A simple app to organize and track your tasks for better productivity."
authors = ["Matheus G. Dias <matheusgiga123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.8.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["D"]

[tool.poetry.scripts]
run-project="task_management.main:main"
